add student delete function
