# routes/student.js
@@ -7,5 +7,6 @@ router.get('/', studentController.getAllStudents);
 router.get('/:studentid', studentController.getStudent);
 router.post('/', studentController.createNewStudent);
 router.put('/:studentid', studentController.updateStudentById);
+router.delete('/:studentid', studentController.deleteStudentById);
 
 module.exports = router;
