# swagger-output.json
@@ -266,7 +266,7 @@
       },
       "put": {
         "tags": [
-          "User"
+          "Student"
         ],
         "description": "",
         "parameters": [
@@ -305,6 +305,31 @@
                 }
               }
             }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Student"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "studentid",
+            "in": "path",
+            "required": true,
+            "type": "string"
           }
         ],
         "responses": {
